<resources>
    <string name="app_name">NFLCotemig</string>
    <string name="login">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="forgot_password">Esqueceu a Senha?</string>
    <string name="crie_sua_conta">Crie sua Conta</string>
    <string name="name">Nome</string>
    <string name="create_account">Criar Conta</string>
    <string name="Ajuda">Não tem problema! Basta colocar seu e-mail aqui, que a gente te ajuda!</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="usuario_criado_com_sucesso">Usuário Criado com sucesso</string>
    <string name="login_now">Pode fazer login já</string>
    <string name="ok">OK</string>
    <string name="ops">Ops</string>
    <string name="user_reset_message">Usuário já existe! Deseja redefinir sua senha?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="internet_required">Erro de conexao. Verifique sua internet</string>
    <string name="user_not_found">Usuário não encontrado. Deseja criar uma nova conta?</string>
    <string name="tabela_campeonato">Tabela Campeonato</string>
    <string name="lista_de_times">Lista de Times</string>
    <string name="title_activity_standings">StandingsActivity</string>
    <string name="highlights_do_jogo">Highlights do Jogo</string>
    <string name="lista_de_jogadores">Lista de Jogadores</string>
    <string name="capacidade_do_estadio">Capacidade do Estadio:</string>
    <string name="endereco_do_estadio">Endereco do Estadio:</string>
    <string name="estadio">Estadio:</string>
    <string name="tecnico_principal">Tecnico Principal:</string>
    <string name="nome_do_time">Nome do Time:</string>
    <string name="nome_do_jogador">Nome do Jogador:</string>
    <string name="posi_o">Posicao:</string>

</resources>