<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_NFL"
    android:orientation="vertical"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <Button
        android:id="@+id/back_login"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/arrow_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/font_nfl"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/font_nfl"
        android:paddingRight="50dp"
        android:text="@string/Ajuda"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/background_button_login"
        android:text="@string/recuperar_senha"
        android:textColor="@color/white" />


</LinearLayout>