<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_NFL"
    android:orientation="vertical"
    tools:context=".ui.activities.CreateAccountActivity">

    <Button
        android:id="@+id/back_login"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/arrow_back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/font_nfl"
        android:text="@string/crie_sua_conta"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/font_nfl"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_nfl"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/create_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/e_mail"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_nfl"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/background_button_login"
        android:text="@string/create_account"
        android:textColor="@color/white" />


</LinearLayout>