<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_NFL"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/font_nfl"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/font_nfl"
        android:paddingLeft="50dp"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_nfl"
        android:paddingLeft="50dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/background_button_login"
        android:text="@string/enter"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:clickable="true"
        android:fontFamily="@font/font_nfl"
        android:gravity="center"
        android:text="Criar Conta"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:fontFamily="@font/font_nfl"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />


</LinearLayout>