<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_NFL"
    tools:context=".ui.activities.DescTeamsActivity">

    <ImageView
        android:id="@+id/strTeamBadge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/box1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/strTeamBadge"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_nfl"
                android:text="@string/nome_do_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/strTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_nfl"
                android:text="Arizona Cardinals"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="@string/tecnico_principal"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/strManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="Kliff Kingsbury"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="@string/estadio"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/strStadium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="State Farm Stadium"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="@string/endereco_do_estadio"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/strStadiumLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="Glendale, Arizona"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="@string/capacidade_do_estadio"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/intStadiumCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_nfl"
                android:text="63400"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/strStadiumThumb"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/box1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/box2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@+id/strStadiumThumb"
        android:gravity="center">

        <ImageButton
            android:id="@+id/strFacebook"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/facebook"
            android:background="@color/transparent"/>

        <ImageButton
            android:id="@+id/strYoutube"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/youtube_button"
            android:background="@color/transparent"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/box2"
        android:background="@drawable/background_button_login"
        android:text="@string/lista_de_jogadores"
        android:textColor="@color/white" />


</RelativeLayout>